# AgentEars

./: .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  pyproject.toml
.github/workflows/: CI_lint.yaml
chatbot_agent/: consts.py  schemas.py
chatbot_agent/embeddings/: base.py  bge.py  schemas.py
chatbot_agent/ingestion/: main.py
chatbot_agent/storage/: _init_db.py  db.py  read_db.py  schemas.py
chatbot_agent/vectorstore/: faiss_store.py
config/: embeddings.yaml
